chore: sync java-api-and-pitfalls.md from docs-restate (#398)
Co-authored-by: slinkydeveloper <6706544+slinkydeveloper@users.noreply.github.com>